[tool.poetry]
name = "pubmed-papers"
version = "0.1.0"
description = "Tool to fetch research papers from PubMed with authors affiliated with pharmaceutical/biotech companies"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pubmed_papers"}]

[tool.poetry.dependencies]
python = "^3.8.1"  # Changed from ^3.8 to ^3.8.1
requests = "^2.31.0"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "cli:main"